--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hospital?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/hospital?serverTimezone=Asia/Taipei&characterEncoding=utf-8&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=springboot
+spring.datasource.password=
+spring.datasource.initialization-mode=ALWAYS
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
